# mocktail

./: LICENSE  README.md  playground.ipynb  pyproject.toml
.github/workflows/: publish-pypi.yml
src/mocktail/: __init__.py  api.py  factory.py  model.py  playground1.py
src/mocktail/fields/: __init__.py  base_field.py  int.py  str.py
src/mocktail/providers/: __init__.py  _int.py  _str.py  generic.py  int.py  str.py
src/mocktail/serializers/: __init__.py  _csv.py  _json.py  _serializer.py  _sql.py
tests/: conftest.py  test_model.py
tests/fields/: test_int.py  test_str.py
